Fix spacing of height

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 .sudoku-board {
     width: 480px;
-    height: 470px;
+    height: 460px;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
